--- a/produtos.html
+++ b/produtos.html
@@ -24,7 +24,7 @@
 
             </div>
             <!--LINK DE RETONO PÁGINA INICIAL-->
-            <a href="auto.html" target="_blank"></a>
+            <a href="index.html" target="_blank"></a>
         </nav>
 
     </header>
