--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!--TÍTULO E CARDS-->
     <section>
         <h2>Auto Center Produtos e Promoções </h2>
+        <h1>Alyne</h1>
         <div>
             <div class="card">
                 <img src="img/pneu.PNG" alt="">
