--- a/servico.html
+++ b/servico.html
@@ -29,7 +29,7 @@
         </nav>
 
       <!--LINK DE RETONO PÁGINA INICIAL-->
-      <a href="index.html" target="_blank"></a>
+      <a href="auto.html" target="_blank"></a>
 
     </header>
 
