--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Aqui Pneus Auto Center">
     <link rel="icon" href="img/logo-site.PNG" />
     <link rel="stylesheet" href="css/produtos.css">
+    <link rel="stylesheet" href="css/responsivo.css">
     <title>Produtos Aqui Pneus Auto Center</title>
 </head>
 
@@ -24,7 +25,7 @@
 
             </div>
             <!--LINK DE RETONO PÁGINA INICIAL-->
-            <a href="auto.html" target="_blank"></a>
+            <a href="index.html" target="_blank"></a>
         </nav>
 
     </header>
