inclusão hamburguer e outras alterações

--- a/index.html
+++ b/index.html
@@ -16,11 +16,28 @@
 </head>
 
 <body>
-    <!--LOGO TIPO MENUS-->
+    
     <header>
+    <!--MENU HAMBURGUER-->
+    <nav class="menu-burguer">
+        <input type="checkbox" class="menu-faketrigger" />
+
+        <div class="menu-lines">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul>
+            <li><a href="servico.html">Serviços</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?">Fale Conosco</a></li>
+        </ul>
+    </nav>
+    <!--TÉRMINO MENU HAMBURGUER-->
+
         <nav class="navbar">
             <div class="logo">
-                <img src="img/logo-autocenter.PNG" alt="">
+                <img src="img/logo.PNG" alt="">
             </div>
             <div class="menu">
 
