--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img/logo-cabeçalho.PNG" alt="">
+                <img src="img/logo.PNG" alt="">
 
             </div>
             <!--LINK DE RETONO PÁGINA INICIAL-->
