--- a/servico.html
+++ b/servico.html
@@ -23,7 +23,7 @@
         <nav class="navbar">
             
             <div class="logo-serve">
-                <img src="img/logo-cabeçalho.PNG" alt="">
+                <img src="img/logo.PNG" alt="">
             </div>
             
         </nav>
