--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </section>
 
     <!--BOTÕES CLICAVEIS WHATS E TELEFONE-->
-    <a id="whats" href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+    <a id="whats" href="https://wa.me/5511945093806?"
         target="_blank"><img class="whats-img" src="img/whats.png"></a>
 
     <a id="fone" href="tel:+55(11)4156-5005"><img class="fone" src="img/telefone.png"></a>
