--- a/produtos.html
+++ b/produtos.html
@@ -1,142 +1,132 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site para venda de pneus novos, remold, serviços automotivos em geral">
-    <meta name="keywords"
-        content="Auto Center, Aqui Pneus, Pneus Novos, Remold, Alinhamento, Balanceamento, Suspensão, Embreagem, Freio">
-    <meta name="author" content="Aqui Pneus Auto Center">
-    <link rel="icon" href="img/logo-site.PNG" />
+    <title>pesquisa em javascript</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto: wght@100 ;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/produtos.css">
     <link rel="stylesheet" href="css/responsivo.css">
-    <title>Produtos Aqui Pneus Auto Center</title>
+
 </head>
 
 <body>
 
-    <!--CABEÇAHO E LOGO-->
+
+    <!--LOGO E MENU-->
     <header>
         <nav class="navbar">
-            <div class="logo">
-                <img src="img/logo.PNG" alt="">
 
+            <div class="logo-serve">
+                <img src="img/logo.PNG" alt="">
             </div>
-            <!--LINK DE RETONO PÁGINA INICIAL-->
-            <a href="index.html" target="_blank"></a>
+
         </nav>
+
+        <!--LINK DE RETONO PÁGINA INICIAL-->
+        <a href="index.html" target="_blank"></a>
 
     </header>
 
-
-
-
-    <h1>AQUI PNEUS</h1>
-    <h2>NOSSOS PRODUTOS</h2>
-
-    <!--INSERÇÃO DOS PRODUTOS-->
-    <main>
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-
-                <p>Pneu Aro "13"</p>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="search">
+                <h1>Todos os produtos</h1>
+                <input type="text" name="" id="find" placeholder="Pesquise aqui...." onkeyup="search()">
             </div>
-        </section>
+            <div class="product-list">
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 175/60/13</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 175/75/13</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 175/70/13</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 185/60/14</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 175/65/14</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 195/55/15</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 205/55/16</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 205/40/17</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 205/40/17</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Novo 205/40/17</h3>
+                    <h4>R$ 300,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Remold 165/70/13</h3>
+                    <h4>R$ 100,00</h4>
+                </div>
+                <div class="product">
+                    <img src="img/pneu.PNG">
+                    <h3>Pneu Remold 165/60/13</h3>
+                    <h4>R$ 200,00</h4>
+                </div>
 
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
             </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-        </section>
-
-        <section id="produtos">
-            <div class="produto">
-                <img src="img/pneu.PNG" alt="">
-                <p>Pneu Aro "13"</p>
-            </div>
-    </main>
-
-    <!--RODAPÉ-->
-    <footer>
-        <div class="logo-rodape">
-            <h1><u>AQUI PNEUS</u></h1>
-            <h2>Auto Center</h2>
-            <h3>Pneus Passeios e Vans</h3>
-            <h4>Novos e Remold</h4>
         </div>
-        <b style="letter-spacing: 2.5px;">© Todos os direitos reservados 2023</b>
-    </footer>
+    </div>
+    <!-- javascript -->
+    <script type="text/javascript">
+        function search(argument) {
+            let filter = document.getElementById('find').value.toUpperCase();
+            let item = document.querySelectorAll('.product');
+            let l = document.getElementsByTagName('h3');
+            for (var i = 0; i <= l.length; i++) {
+                let a = item[i].getElementsByTagName('h3')[0]; let value = a.innerHTML ||
+                    a.innerText || a.textContent; if (value.toUpperCase().indexOf(filter) > -1) {
+                        item[i].style.display = "";
+                    }
+                else {
+                    item[i].style.display = "none";
+                }
+            }
+        }
+    </script>
+
+<footer>
+    <div class="logo-rodape">
+        <h1><u>AQUI PNEUS</u></h1>
+        <h2>Auto Center</h2>
+        <h3>Pneus Passeios e Vans</h3>
+        <h4>Novos e Remold</h4>
+    </div>
+    <b style="letter-spacing: 2.5px;">© Todos os direitos reservados 2023</b>
+</footer>
 
 </body>
 
