--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="servico.html">Serviços</a>
                 
                 <!--LINK PARA PRODUTOS-->
-                <a href="produtos.html">Produtos</a>
+                <a href="product.html">Produtos</a>
                 <a id="botao" href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
                     target="_blank" src="img/entrar-contato.png">Fale Conosco</a>
             </div>
