--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <ul>
             <li><a href="servico.html">Serviços</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?">Fale Conosco</a></li>
+            <li><a href="product.html">Produtos</a></li>
+            <li><a href="https://wa.me/5511945093806?">Falar Conosco</a></li>
         </ul>
     </nav>
     <!--TÉRMINO MENU HAMBURGUER-->
@@ -46,7 +46,7 @@
                 
                 <!--LINK PARA PRODUTOS-->
                 <a href="product.html">Produtos</a>
-                <a id="botao" href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                <a id="botao" href="https://wa.me/5511945093806?"
                     target="_blank" src="img/entrar-contato.png">Fale Conosco</a>
             </div>
         </nav>
