--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <span></span>
         </div>
         <ul>
-            <li><a href="servico.html">Serviços</a></li>
-            <li><a href="product.html">Produtos</a></li>
-            <li><a href="https://wa.me/5511945093806?">Falar Conosco</a></li>
+            <li><a href="servico.html">SERVIÇOS</a></li>
+            <li><a href="product.html">PRODUTOS</a></li>
+            <li><a href="https://wa.me/5511945093806?">FALAR CONOSCO</a></li>
         </ul>
     </nav>
     <!--TÉRMINO MENU HAMBURGUER-->
