--- a/index.html
+++ b/index.html
@@ -16,43 +16,37 @@
 </head>
 
 <body>
-    
+
     <header>
-    <!--MENU HAMBURGUER-->
-    <nav class="menu-burguer">
-        <input type="checkbox" class="menu-faketrigger" />
+        <!--MENU HAMBURGUER-->
+        <nav class="menu-burguer">
+            <input type="checkbox" class="menu-faketrigger" />
 
-        <div class="menu-lines">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul>
-            <li><a href="servico.html">SERVIÇOS</a></li>
-            <li><a href="product.html">PRODUTOS</a></li>
-            <li><a href="https://wa.me/5511945093806?">FALAR CONOSCO</a></li>
-        </ul>
-    </nav>
-    <!--TÉRMINO MENU HAMBURGUER-->
-
+            <div class="menu-lines">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul>
+                <li><a href="servico.html">SERVIÇOS</a></li>
+                <li><a href="product.html">PRODUTOS</a></li>
+                <li><a href="https://wa.me/5511945093806?">FALAR CONOSCO</a></li>
+            </ul>
+        </nav>
+        <!--TÉRMINO MENU HAMBURGUER-->
+        <!--LOGO, MENU, LINKS SEVIÇOS, PRODUTOS E FALE CONOSCO-->
         <nav class="navbar">
             <div class="logo">
                 <img src="img/logo.PNG" alt="">
             </div>
             <div class="menu">
-
-                <!--LINK PARA SERVIÇOS-->
                 <a href="servico.html">Serviços</a>
-                
-                <!--LINK PARA PRODUTOS-->
                 <a href="product.html">Produtos</a>
-                <a id="botao" href="https://wa.me/5511945093806?"
-                    target="_blank" src="img/entrar-contato.png">Fale Conosco</a>
+                <a id="botao" href="https://wa.me/5511945093806?" target="_blank" src="img/entrar-contato.png">Fale
+                    Conosco</a>
             </div>
         </nav>
     </header>
-
-
     <!--TÍTULO E CARDS-->
     <section>
         <h2>Auto Center Produtos e Promoções </h2>
@@ -68,7 +62,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806?"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -85,7 +79,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -102,7 +96,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -119,7 +113,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -136,7 +130,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -153,7 +147,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                        <a href="https://wa.me/5511945093806"
                             target="" class="btn btn-white btn-animate">Entre em Contato</a>
                     </div>
                 </div>
@@ -201,8 +195,7 @@
     </section>
 
     <!--BOTÕES CLICAVEIS WHATS E TELEFONE-->
-    <a id="whats" href="https://wa.me/5511945093806?"
-        target="_blank"><img class="whats-img" src="img/whats.png"></a>
+    <a id="whats" href="https://wa.me/5511945093806?" target="_blank"><img class="whats-img" src="img/whats.png"></a>
 
     <a id="fone" href="tel:+55(11)4156-5005"><img class="fone" src="img/telefone.png"></a>
 
