--- a/index.html
+++ b/index.html
@@ -62,8 +62,24 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                        <a href="https://wa.me/5511945093806?" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/pneu.PNG" alt="">
+                <div class="card-text">
+                    <h3>ARO 13</h3>
+                    <div class="garantia">
+                        <p>Pneus novos
+                            com 5 anos de
+                            Garantia de fábrica</p>
+                    </div>
+                    <p class="valor">R$ 200,00</p>
+                    <div class="text-box">
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
                     </div>
                 </div>
             </div>
@@ -79,8 +95,8 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
                     </div>
                 </div>
             </div>
@@ -96,12 +112,11 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
                     </div>
                 </div>
             </div>
-
             <div class="card">
                 <img src="img/pneu.PNG" alt="">
                 <div class="card-text">
@@ -113,12 +128,11 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
                     </div>
                 </div>
             </div>
-
             <div class="card">
                 <img src="img/pneu.PNG" alt="">
                 <div class="card-text">
@@ -130,30 +144,14 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="img/pneu.PNG" alt="">
-                <div class="card-text">
-                    <h3>ARO 13</h3>
-                    <div class="garantia">
-                        <p>Pneus novos
-                            com 5 anos de
-                            Garantia de fábrica</p>
-                    </div>
-                    <p class="valor">R$ 200,00</p>
-                    <div class="text-box">
-                        <a href="https://wa.me/5511945093806"
-                            target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                            Contato</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!--TÍTULO E CARDS-->
 
     <!--CONTATOS, ENDEREÇO COM MAPA DE LOCALIZAÇÃO-->
     <section>
@@ -175,7 +173,7 @@
 
                 <h3>Fale Conosco</h3>
                 <div class="text-box">
-                    <a href="https://wa.me/5511945093806?text=A%20paz%20amigo(a),%20em%20que%20posso%20ajudar?"
+                    <a href="https://wa.me/5511945093806"
                         target="" class="btn btn-white btn-animate">Entre em Contato</a>
                 </div>
             </div>
@@ -195,7 +193,7 @@
     </section>
 
     <!--BOTÕES CLICAVEIS WHATS E TELEFONE-->
-    <a id="whats" href="https://wa.me/5511945093806?" target="_blank"><img class="whats-img" src="img/whats.png"></a>
+    <a id="whats" href="https://wa.me/5511945093806" target="_blank"><img class="whats-img" src="img/whats.png"></a>
 
     <a id="fone" href="tel:+55(11)4156-5005"><img class="fone" src="img/telefone.png"></a>
 
