ajuste produtos img responsive

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </div>
         </nav>
     </header>
+    <!--TÉRMINO LOGO, MENU, LINKS SEVIÇOS, PRODUTOS E FALE CONOSCO-->
+
     <!--TÍTULO E CARDS-->
     <section>
         <h2>Auto Center Produtos e Promoções </h2>
@@ -151,7 +153,7 @@
             </div>
         </div>
     </section>
-    <!--TÍTULO E CARDS-->
+    <!--TÉRMINO TÍTULOS E CARDS-->
 
     <!--CONTATOS, ENDEREÇO COM MAPA DE LOCALIZAÇÃO-->
     <section>
@@ -173,12 +175,10 @@
 
                 <h3>Fale Conosco</h3>
                 <div class="text-box">
-                    <a href="https://wa.me/5511945093806"
-                        target="" class="btn btn-white btn-animate">Entre em Contato</a>
+                    <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                        Contato</a>
                 </div>
             </div>
-
-
             <div class="mapas">
                 <a href="https://goo.gl/maps/iabkGDEpimp88z2W8">
                 </a>
