--- a/product.html
+++ b/product.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site para venda de pneus novos, remold, serviços automotivos em geral">
+    <meta name="keywords"
+        content="Auto Center, Aqui Pneus, Pneus Novos, Remold, Alinhamento, Balanceamento, Suspensão, Embreagem, Freio">
+    <meta name="author" content="Aqui Pneus Auto Center">
+    <link rel="icon" href="img/logo-site.PNG" />
     <link rel="stylesheet" href="css/product.css">
     <title>Produtos</title>
 </head>
 
 <body>
-    <!---->
+    <!--LOGO DA EMPRESA-->
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -18,7 +23,7 @@
             </div>
         </nav>
     </header>
-    <!---->
+    <!--PRODUTOS E CAMPO PESQUISA-->
     <section>
         <h1>Nossos Produtos</h1>
         <div class="container">
@@ -119,7 +124,7 @@
             }
         }
     </script>
-    <!---->
+    <!--CABEÇALHO-->
     <footer>
         <div class="logo-rodape">
             <h1><u>AQUI PNEUS</u></h1>
