--- a/servico.html
+++ b/servico.html
@@ -18,92 +18,77 @@
 
 <body>
 
-    <!--LOGO E MENU-->
+    <!--LOGO E MENU LINK DE RETONO PÁGINA INICIAL-->
     <header>
         <nav class="navbar">
-            
             <div class="logo-serve">
                 <img src="img/logo.PNG" alt="">
             </div>
-            
         </nav>
-
-      <!--LINK DE RETONO PÁGINA INICIAL-->
-      <a href="index.html" target="_blank"></a>
-
+        <a href="index.html" target="_blank"></a>
     </header>
-
+    <!--CARDS COM DESCRIÇÃO DE SERVIÇO-->
     <section>
-
         <h2>O que podemos fazer por você?</h2>
-
-
         <div class="serviços">
-
-
             <div id="container-services">
                 <img src="img/alinha.png">
                 <h1> Alinhamento 3D</h1>
-                <p class="texto-esp">O Alinhamento 3D é feito através da ajuda de softwares e conta com uma tecnologia avançada para
+                <p class="texto-esp">O Alinhamento 3D é feito através da ajuda de softwares e conta com uma tecnologia
+                    avançada para
                     proporcionar um alinhamento impecável para o veículo.</p>
             </div>
-
         </div>
-
         <div class="serviços">
-
             <div id="container-services">
                 <img src="img/bala.png">
                 <h1>Balanceamento</h1>
-                <p class="texto-esp">O desequilíbrio das rodas e pneus é o principal causador de vibrações no volante e do veiculo como um
+                <p class="texto-esp">O desequilíbrio das rodas e pneus é o principal causador de vibrações no volante e
+                    do veiculo como um
                     todo, dependendo da grandeza do desequilíbrio do conjunto.</p>
             </div>
-
         </div>
-
         <div class="serviços">
             <div id="container-services">
                 <img src="img/freio.png">
                 <h1>Sistema de Freio</h1>
-                <p class="texto-esp">O sistema de freio é responsável diretamente pela segurança do veículo, e a Impacto Prime oferece
+                <p class="texto-esp">O sistema de freio é responsável diretamente pela segurança do veículo, e a Impacto
+                    Prime oferece
                     todas as peças e serviços para você rodar numa boa e sem preocupações!</p>
             </div>
         </div>
         <div class="serviços">
-
             <div id="container-services">
                 <img src="img/alinha.png">
                 <h1>Suspensão</h1>
-                <p class="texto-esp">Somos especialistas em deixar a suspensão do seu carro com especificações de fábrica, trabalhamos com
+                <p class="texto-esp">Somos especialistas em deixar a suspensão do seu carro com especificações de
+                    fábrica, trabalhamos com
                     todas as peças que compõem a estrutura do seu carro, e o melhor de tudo é que te damos garantia de 1
                     ano em todas as peças trocadas.</p>
             </div>
-
         </div>
-
         <div class="serviços">
             <div id="container-services">
                 <img src="img/alinha.png">
                 <h1>Limpeza de Bico</h1>
-                <p class="texto-esp">Limpeza de Bico é um procedimento relativamente simples, que consiste na remoção de obstruções que
+                <p class="texto-esp">Limpeza de Bico é um procedimento relativamente simples, que consiste na remoção de
+                    obstruções que
                     comprometem o funcionamento da válvula injetora (também chamada de bico injetor).</p>
             </div>
         </div>
-
         <div class="serviços">
-
             <div id="container-services">
                 <img src="img/bala.png">
                 <h1>Revisão Completa</h1>
-                <p class="texto-esp">O motorista consciente entende que a revisão é tão importante quanto usar o cinto de segurança no
+                <p class="texto-esp">O motorista consciente entende que a revisão é tão importante quanto usar o cinto
+                    de segurança no
                     carro. Ela deve ser feita a cada 3 meses ou 10.000km.</p>
             </div>
-
         </div>
     </section>
 
-     <!--RODAPÉ-->
-     <footer>
+    <!--RODAPÉ-->
+    <footer>
         <div class="logo-rodape">
             <h1><u>AQUI PNEUS</u></h1>
             <h2>Auto Center</h2>
@@ -111,7 +96,7 @@
             <h4>Novos e Remold</h4>
         </div>
         <b style="letter-spacing: 2.5px;">© Todos os direitos reservados 2023</b>
-    </footer> 
+    </footer>
 
 
 </body>
