várias alterações, footer,

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta name="keywords"
         content="Auto Center, Aqui Pneus, Pneus Novos, Remold, Alinhamento, Balanceamento, Suspensão, Embreagem, Freio">
     <meta name="author" content="Aqui Pneus Auto Center">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="img/logo-site.PNG" />
     <link rel="stylesheet" href="css/auto.css">
+    <link rel="stylesheet" href="css/servico-slide.css">
     <link rel="stylesheet" href="css/responsivo.css">
     <title>Aqui Pneus</title>
 </head>
@@ -42,7 +44,7 @@
             <div class="menu">
                 <a href="servico.html">Serviços</a>
                 <a href="product.html">Produtos</a>
-                <a id="botao" href="https://wa.me/5511945093806?" target="_blank" src="img/entrar-contato.png">Fale
+                <a id="botao" href="https://wa.me/5511945093806?" target="_blank" src="img/entrar-contato.png">Falar
                     Conosco</a>
             </div>
         </nav>
@@ -64,7 +66,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806?" target="" class="btn btn-white btn-animate">Entre em
+                        <a href="https://wa.me/5511945093806?" target="" class="btn btn-white btn-animate">Entrar em
                             Contato</a>
                     </div>
                 </div>
@@ -80,24 +82,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
-                            Contato</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="img/pneu.PNG" alt="">
-                <div class="card-text">
-                    <h3>ARO 13</h3>
-                    <div class="garantia">
-                        <p>Pneus novos
-                            com 5 anos de
-                            Garantia de fábrica</p>
-                    </div>
-                    <p class="valor">R$ 200,00</p>
-                    <div class="text-box">
-                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
                             Contato</a>
                     </div>
                 </div>
@@ -114,7 +99,24 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
+                            Contato</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="img/pneu.PNG" alt="">
+                <div class="card-text">
+                    <h3>ARO 13</h3>
+                    <div class="garantia">
+                        <p>Pneus novos
+                            com 5 anos de
+                            Garantia de fábrica</p>
+                    </div>
+                    <p class="valor">R$ 200,00</p>
+                    <div class="text-box">
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
                             Contato</a>
                     </div>
                 </div>
@@ -130,7 +132,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
                             Contato</a>
                     </div>
                 </div>
@@ -146,7 +148,7 @@
                     </div>
                     <p class="valor">R$ 200,00</p>
                     <div class="text-box">
-                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                        <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
                             Contato</a>
                     </div>
                 </div>
@@ -173,9 +175,9 @@
                 <h3>E-mail</h3>
                 <p class="text">aquipneusautocenter4961@gmail.com</p>
 
-                <h3>Fale Conosco</h3>
+                <h3>Falar Conosco</h3>
                 <div class="text-box">
-                    <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entre em
+                    <a href="https://wa.me/5511945093806" target="" class="btn btn-white btn-animate">Entrar em
                         Contato</a>
                 </div>
             </div>
@@ -197,16 +199,60 @@
     <a id="fone" href="tel:+55(11)4156-5005"><img class="fone" src="img/telefone.png"></a>
 
     <!--RODAPÉ-->
-    <footer>
-        <div class="logo-rodape">
-            <h1><u>AQUI PNEUS</u></h1>
-            <h2>Auto Center</h2>
-            <h3>Pneus Passeios e Vans</h3>
-            <h4>Novos e Remold</h4>
-        </div>
-        <b style="letter-spacing: 2.5px;">© Todos os direitos reservados 2023</b>
-    </footer>
+    <footer class="main_footer container">
 
+        <div class="content">
+            <div class="colfooter">
+
+                <h3 class="titleFooter">Menu</h3>
+
+                <ul>
+
+                    <li><a href="#" title="Página Inícial">Página Inícial</a></li>
+                    <li><a href="#" title="Sobre a Empresa">Sobre a Empresa</a></li>
+                    <li><a href="#" title="Galeria de Fotos">Galeria de Fotos</a></li>
+                    <li><a href="#" title="Fale Conosco">Fale Conosco</a></li>
+                </ul>
+            </div><!--Col Footer 1-->
+
+
+            <div class="colfooter">
+
+                <h3 class="titleFooter">Contato</h3>
+
+                <p><i class="fa fa-envelope"></i> aquipneusautocenter4961@gmail.com</p>
+                <p><i class="fa fa-map-marker"></i> Localização</p>
+                <p><i class="fa fa-phone"></i> (11) 4156-5005</p>
+                <p><i class="fa fa-whatsapp"></i> (11) 94509-3806</p>
+            </div><!--Col Footer 2-->
+            <div class="colfooter">
+
+                <h3 class="titleFooter">Redes Sociais</h3>
+
+                <div>
+                    <ul class="socials">
+                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/home" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/invites/contact/?i=ikkfhspnqkcl&utm_content=9uw6p1"
+                                target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.youtube.com/@davidalmeidamessias3684" target="_blank"><i
+                                    class="fa fa fa-youtube"></i></a></li>
+                        <li><a href="https://github.com/Dam1977" target="_blank"><i class="fa fa fa-github"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div><!--Col Footer 3-->
+            <div class="clear"></div>
+
+        </div><!--Contant-->
+        <div class="main_footer_copy">
+
+            <p class="m-b-footer"> Aqui Pneus Auto Center - 2023, todos os direitos reservados</p>
+            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Dam Web</a></p>
+
+        </div>
+    </footer>
 </body>
 
 </html>
