--- a/dam-slide.html
+++ b/dam-slide.html
@@ -1,165 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/dam-slide.css">
-    <title>Dam Slide</title>
+    <title>Document</title>
 </head>
-
 <body>
-
-    <!--LOGO DA EMPRESA-->
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="img/logo.PNG" alt="Aqui Pneus">
-            </div>
-        </nav>
-    </header>
-
-    <!--PRODUTOS E CAMPO PESQUISA-->
-    <div class="div-slider">
-        <ul class="slides-front ">
-            <input type="radio" name="radio-btn" id="img-1" checked="">
-            <li class="slide-container ">
-                <div class="slide autoplay">
-                    <img src="img/img01.jpg">
-                </div>
-
-                <div class="nav">
-                    <label for="img-3" class="prev">‹</label>
-                    <label for="img-2" class="next">›</label>
-                </div>
-
-            </li>
-            <input type="radio" name="radio-btn" id="img-2">
-            <li class="slide-container">
-                <div class="slide">
-                    <img src="img/img02.jpg">
-                </div>
-                <div class="nav">
-                    <label for="img-1" class="prev">‹</label>
-                    <label for="img-3" class="next">›</label>
-                </div>
-            </li>
-
-            <input type="radio" name="radio-btn" id="img-3">
-            <li class="slide-container">
-                <div class="slide">
-                    <img src="img/img03.jpg">
-                </div>
-                <div class="nav">
-                    <label for="img-2" class="prev">‹</label>
-                    <label for="img-1" class="next">›</label>
-                </div>
-            </li>
-
-            <input type="radio" name="radio-btn" id="img-1" checked="">
-            <li class="slide-container ">
-                <div class="slide autoplay">
-                    <img src="img/img04.jpg">
-                </div>
-
-                <div class="nav">
-                    <label for="img-3" class="prev">‹</label>
-                    <label for="img-2" class="next">›</label>
-                </div>
-
-            </li>
-            <input type="radio" name="radio-btn" id="img-2">
-            <li class="slide-container">
-                <div class="slide">
-                    <img src="img/img05.jpg">
-                </div>
-                <div class="nav">
-                    <label for="img-1" class="prev">‹</label>
-                    <label for="img-3" class="next">›</label>
-                </div>
-            </li>
-
-            <input type="radio" name="radio-btn" id="img-3">
-            <li class="slide-container">
-                <div class="slide">
-                    <img src="img/img06.jpg">
-                </div>
-                <div class="nav">
-                    <label for="img-2" class="prev">‹</label>
-                    <label for="img-1" class="next">›</label>
-                </div>
-            </li>
-
-            <li class="nav-dots">
-                <label for="img-1" class="nav-dot" id="img-dot-1"></label>
-                <label for="img-2" class="nav-dot" id="img-dot-2"></label>
-                <label for="img-3" class="nav-dot" id="img-dot-3"></label>
-                <label for="img-1" class="nav-dot" id="img-dot-1"></label>
-                <label for="img-2" class="nav-dot" id="img-dot-2"></label>
-                <label for="img-3" class="nav-dot" id="img-dot-3"></label>
-            </li>
-        </ul>
-    </div>
-
-    <!--RODAPÉ-->
-    <footer class="main_footer container">
-
-        <div class="content">
-            <div class="colfooter">
-
-                <h3 class="titleFooter"> Menu</h3>
-
-                <ul>
-
-                    <li><a href="#" title="Página Inícial">Página Inícial</a></li>
-                    <li><a href="#" title="Sobre a Empresa">Sobre a Empresa</a></li>
-                    <li><a href="#" title="Galeria de Fotos">Galeria de Fotos</a></li>
-                    <li><a href="#" title="Fale Conosco">Fale Conosco</a></li>
-                </ul>
-            </div><!--Col Footer 1-->
-
-
-            <div class="colfooter">
-
-                <h3 class="titleFooter"> Contato</h3>
-
-                <p><i class="fa fa-envelope"></i> aquipneusautocenter4961@gmail.com</p>
-                <p><i class="fa fa-map-marker"></i> Localização</p>
-                <p><i class="fa fa-phone"></i> (11) 4156-5005</p>
-                <p><i class="fa fa-whatsapp"></i> (11) 94509-3806</p>
-            </div><!--Col Footer 2-->
-            <div class="colfooter">
-
-                <h3 class="titleFooter"> Redes Sociais</h3>
-
-                <div>
-                    <ul class="socials">
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/home" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/invites/contact/?i=ikkfhspnqkcl&utm_content=9uw6p1"
-                                target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://www.youtube.com/@davidalmeidamessias3684" target="_blank"><i
-                                    class="fa fa fa-youtube"></i></a></li>
-                        <li><a href="https://github.com/Dam1977" target="_blank"><i class="fa fa fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div><!--Col Footer 3-->
-            <div class="clear"></div>
-
-        </div><!--Contant-->
-        <div class="main_footer_copy">
-
-            <p class="m-b-footer"> Seusite - 2021, todos os direitos reservados.</p>
-            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Seu nome
-                    aqui</a></p>
-
+    <div class="container">
+        <div class="wrapper">
+            <img src="imagens/1.PNG">
+            <img src="imagens/2.PNG">
+            <img src="imagens/3.PNG">
+            <img src="imagens/4.PNG">
+            <img src="imagens/5.PNG">
+            <img src="imagens/5.PNG">
         </div>
-    </footer>
-
+    </div>
 </body>
-
 </html>
