--- a/dam-slide.html
+++ b/dam-slide.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+
+      <!--LOGO E MENU LINK DE RETONO PÁGINA INICIAL-->
+      <header>
+        <nav class="navbar">
+            <div class="logo-serve">
+                <img src="img/logo.PNG" alt="">
+            </div>
+        </nav>
+        <a href="index.html" target="_blank"></a>
+    </header>
+
+
     <div class="container">
         <div class="wrapper">
             <img src="imagens/1.PNG">
