--- a/index1.html
+++ b/index1.html
@@ -9,29 +9,29 @@
     <meta name="keywords"
         content="Auto Center, Aqui Pneus, Pneus Novos, Remold, Alinhamento, Balanceamento, Suspensão, Embreagem, Freio">
     <meta name="author" content="Aqui Pneus Auto Center">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="img/logo-site.PNG" />
-    <link rel="stylesheet" href="css/btn.css">
-    <link rel="stylesheet" href="css/responsivo.css">
     <link rel="stylesheet" href="css/auto.css">
+    <link rel="stylesheet" href="css/servico-slide.css">
+    <link rel="stylesheet" href="css/responsivo.css">
     <title>Aqui Pneus</title>
 </head>
 
 <body>
 
     <header>
-        <!--CABEÇALHO, MENU HAMBUGUER, LOGO-->
-        <nav class="navbar">
+        <!--MENU HAMBURGUER-->
+        <nav>
             <ul class="nav-bar">
                 <li class="logo"><a href="#"><img src="img/logo.PNG" alt="logo"></a></li>
                 <input type="checkbox" id="check">
                 <span class="menu">
-                    <li><a href="servico.html">Serviços</a></li>
-                    <li><a href="product.html">Produtos</a></li>
-                    <li><a href="https://wa.me/5511945093806" target="_blank">Contato</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="https://wa.me/5511945093806">Contato</a></li>
                     <li><a href="#">Sobre Nós</a></li>
                     <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
                 </span>
@@ -39,11 +39,12 @@
             </ul>
         </nav>
     </header>
-    <!--TÉRMINO CABEÇALHO, MENU HAMBUGUER, LOGO-->
+    </header>
+    <!--TÉRMINO LOGO, MENU, LINKS SEVIÇOS, PRODUTOS E FALE CONOSCO-->
 
     <!--TÍTULO E CARDS-->
     <section>
-        <span><h2>Auto Center Produtos e Promoções </h2></span>
+        <h2>Auto Center Produtos e Promoções </h2>
         <div>
             <div class="card">
                 <img src="img/pneu.PNG" alt="">
@@ -161,7 +162,7 @@
 
             <div class="contatos">
                 <h2>LOCALIZAÇÃO</h2>
-                <p class="text">Estrada Tenente Marques, 4961 Fazendinha Santana de Parnaíba</p>
+                <p class="text">ESTRADA TENENTE MARQUES, 4961 - FAZENDINHA SANTANA DE PARNAIBA</p>
                 <h3>E-mail</h3>
                 <p class="text">aquipneusautocenter4961@gmail.com</p>
 
@@ -239,12 +240,10 @@
         <div class="main_footer_copy">
 
             <p class="m-b-footer"> Aqui Pneus Auto Center - 2023, todos os direitos reservados</p>
-            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Dam Web</a>
-            </p>
+            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Dam Web</a></p>
 
         </div>
     </footer>
-
 </body>
 
 </html>
