--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <!--TÍTULO E CARDS-->
     <section>
-        <span><h2>Auto Center Produtos e Promoções </h2></span>
+        <span>
+            <h2>Auto Center Produtos e Promoções </h2>
+        </span>
         <div>
             <div class="card">
                 <img src="img/pneu.PNG" alt="">
@@ -221,14 +223,10 @@
 
                 <div>
                     <ul class="socials">
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/home" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/invites/contact/?i=ikkfhspnqkcl&utm_content=9uw6p1"
-                                target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://www.youtube.com/@davidalmeidamessias3684" target="_blank"><i
-                                    class="fa fa fa-youtube"></i></a></li>
-                        <li><a href="https://github.com/Dam1977" target="_blank"><i class="fa fa fa-github"></i></a>
-                        </li>
+                        <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa fa-youtube"></i></a></li>
                     </ul>
                 </div>
 
