--- a/servico.html
+++ b/servico.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site para venda de pneus novos, remold, serviços automotivos em geral">
-    <meta name="keywords"
-        content="Auto Center, Aqui Pneus, Pneus Novos, Remold, Alinhamento, Balanceamento, Suspensão, Embreagem, Freio">
-    <meta name="author" content="Aqui Pneus Auto Center">
-    <link rel="icon" href="img/logo-site.PNG" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/servico-slide.css">
     <link rel="stylesheet" href="css/servico.css">
-    <link rel="stylesheet" href="css/auto.css">
     <link rel="stylesheet" href="css/responsivo.css">
-    <title>Auto Center Aqui Pneus</title>
+    <title>Serviços</title>
 </head>
 
 <body>
-
-    <!--LOGO E MENU LINK DE RETONO PÁGINA INICIAL-->
+    <div class="voltar">
+        <img src="img/logo-site.PNG" alt=""><a href="index.html">Voltar</a>
+    </div>
+    <!--LOGO DA EMPRESA-->
     <header>
         <nav class="navbar">
-            <div class="logo-serve">
-                <img src="img/logo.PNG" alt="">
+            <div class="logo">
+                <img src="img/logo.PNG" alt="Aqui Pneus">
             </div>
         </nav>
-        <a href="index.html" target="_blank"></a>
     </header>
-    <!--CARDS COM DESCRIÇÃO DE SERVIÇO-->
+    <!--PRODUTOS E CAMPO PESQUISA-->
+
+    <!--CARDS COM SLIDES-->
     <section>
-        <h2>O que podemos fazer por você?</h2>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/alinha.png">
-                <h1> Alinhamento 3D</h1>
-                <p class="texto-esp">O Alinhamento 3D é feito através da ajuda de softwares e conta com uma tecnologia
-                    avançada para
-                    proporcionar um alinhamento impecável para o veículo.</p>
-            </div>
-        </div>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/bala.png">
-                <h1>Balanceamento</h1>
-                <p class="texto-esp">O desequilíbrio das rodas e pneus é o principal causador de vibrações no volante e
-                    do veiculo como um
-                    todo, dependendo da grandeza do desequilíbrio do conjunto.</p>
-            </div>
-        </div>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/freio.png">
-                <h1>Sistema de Freio</h1>
-                <p class="texto-esp">O sistema de freio é responsável diretamente pela segurança do veículo, e a Impacto
-                    Prime oferece
-                    todas as peças e serviços para você rodar numa boa e sem preocupações!</p>
-            </div>
-        </div>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/alinha.png">
-                <h1>Suspensão</h1>
-                <p class="texto-esp">Somos especialistas em deixar a suspensão do seu carro com especificações de
-                    fábrica, trabalhamos com
-                    todas as peças que compõem a estrutura do seu carro, e o melhor de tudo é que te damos garantia de 1
-                    ano em todas as peças trocadas.</p>
-            </div>
-        </div>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/alinha.png">
-                <h1>Limpeza de Bico</h1>
-                <p class="texto-esp">Limpeza de Bico é um procedimento relativamente simples, que consiste na remoção de
-                    obstruções que
-                    comprometem o funcionamento da válvula injetora (também chamada de bico injetor).</p>
-            </div>
-        </div>
-        <div class="serviços">
-            <div id="container-services">
-                <img src="img/bala.png">
-                <h1>Revisão Completa</h1>
-                <p class="texto-esp">O motorista consciente entende que a revisão é tão importante quanto usar o cinto
-                    de segurança no
-                    carro. Ela deve ser feita a cada 3 meses ou 10.000km.</p>
-            </div>
+        <input type="radio" class="slide-controller" name="slide" checked />
+        <input type="radio" class="slide-controller" name="slide" />
+        <input type="radio" class="slide-controller" name="slide" />
+        <input type="radio" class="slide-controller" name="slide" />
+        <input type="radio" class="slide-controller" name="slide" />
+        <input type="radio" class="slide-controller" name="slide" />
+
+        <div class="slide-show">
+            <ul class="slides-list">
+                <li class="slide">
+                    <img src="img/img01.jpg" />
+                    <p>O <span style="color:rgb(173, 236, 47)">ALINHAMENTO</span> <u>3D</u> é feito através da ajuda de softwares e conta com uma tecnologia
+                        avançada para
+                        proporcionar um alinhamento impecável para o veículo</p>
+
+                </li>
+                <li class="slide">
+                    <img src="img/img02.jpg" />
+                    <p>
+                    <p>Limpeza de <span style="color:rgb(173, 236, 47)">BICO</span> é um procedimento relativamente simples, que consiste na remoção de
+                        obstruções que comprometem o funcionamento da válvula injetora (também chamada de bico injetor)
+                    </p>
+                    </p>
+                </li>
+                <li class="slide">
+                    <img src="img/img03.jpg" />
+                    <p>
+                    <p>O sistema de <span style="color:rgb(173, 236, 47)">FREIO</span> é responsável diretamente pela segurança do veículo, e a Impacto
+                        Prime oferece
+                        todas as peças e serviços para você rodar numa boa e sem preocupações!</p>
+                    </p>
+                </li>
+                <li class="slide">
+                    <img src="img/img04.jpg" />
+                    <p>
+                    <p>O motorista consciente entende que a <span style="color:rgb(173, 236, 47)">REVISÃO</span> é tão importante quanto usar o cinto
+                        de segurança no
+                        carro. Ela deve ser feita a cada 3 meses ou 10.000km</p>
+                    </p>
+                </li>
+                <li class="slide">
+                    <img src="img/img05.jpg" />
+                    <p>
+                    <p>Somos especialistas em deixar a <span style="color:rgb(173, 236, 47)">SUSPENSÃO</span> do seu carro com especificações de
+                        fábrica, trabalhamos com
+                        todas as peças que compõem a estrutura do seu carro, e o melhor de tudo é que te damos garantia
+                        de 1
+                        ano em todas as peças trocadas</p>
+                    </p>
+                </li>
+                <li class="slide">
+                    <img src="img/img06.jpg" />
+                    <p>
+                    <p>Um <span style="color:rgb(173, 236, 47)">BALANCEAMENTO</span> acertivo, evita o desequilíbrio das rodas e pneus que é o principal
+                        causador de vibrações no volante e
+                        do veiculo como um
+                        todo, dependendo da grandeza do desequilíbrio do conjunto</p>
+                    </p>
+                </li>
+            </ul>
         </div>
     </section>
+    <!--FIM DO SLIDES CARDS-->
 
-      <!--RODAPÉ-->
-      <footer class="main_footer container">
+    <!--RODAPÉ-->
+    <footer class="main_footer container">
 
         <div class="content">
             <div class="colfooter">
@@ -106,7 +108,7 @@
                 </ul>
             </div><!--Col Footer 1-->
 
-            
+
             <div class="colfooter">
 
                 <h3 class="titleFooter"> Contato</h3>
@@ -122,16 +124,13 @@
 
                 <div>
                     <ul class="socials">
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/home" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.instagram.com/invites/contact/?i=ikkfhspnqkcl&utm_content=9uw6p1"
-                                target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://www.youtube.com/@davidalmeidamessias3684" target="_blank"><i
-                                    class="fa fa fa-youtube"></i></a></li>
-                        <li><a href="https://github.com/Dam1977" target="_blank"><i class="fa fa fa-github"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="" target="_blank"><i class="fa fa fa-youtube"></i></a></li>
                     </ul>
                 </div>
-                
+
             </div><!--Col Footer 3-->
             <div class="clear"></div>
 
@@ -139,11 +138,11 @@
         <div class="main_footer_copy">
 
             <p class="m-b-footer"> Aqui Pneus Auto Center - 2023, todos os direitos reservados</p>
-            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Dam Web</a></p>
+            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="#" title="Seu nome">Dam Web</a>
+            </p>
 
         </div>
     </footer>
-
 
 </body>
 
