exlusão desnecessário, inclusão slide

--- a/dam-slide.html
+++ b/dam-slide.html
@@ -22,12 +22,12 @@
 
     <div class="container">
         <div class="wrapper">
-            <img src="imagens/1.PNG">
-            <img src="imagens/2.PNG">
-            <img src="imagens/3.PNG">
-            <img src="imagens/4.PNG">
-            <img src="imagens/5.PNG">
-            <img src="imagens/5.PNG">
+            <img src="img/img01.jpg">
+            <img src="img/img02.jpg">
+            <img src="img/img03.jpg">
+            <img src="img/img04.jpg">
+            <img src="img/img05.jpg">
+            <img src="img/img06.jpg">
         </div>
     </div>
 </body>
