--- a/servico.html
+++ b/servico.html
@@ -38,7 +38,8 @@
             <ul class="slides-list">
                 <li class="slide">
                     <img src="img/img01.jpg" />
-                    <p>O <span style="color:rgb(173, 236, 47)">ALINHAMENTO</span> <u>3D</u> é feito através da ajuda de softwares e conta com uma tecnologia
+                    <p>O <span style="color:rgb(173, 236, 47)">ALINHAMENTO 3D</span> é feito através da ajuda de
+                        softwares e conta com uma tecnologia
                         avançada para
                         proporcionar um alinhamento impecável para o veículo</p>
 
@@ -46,7 +47,8 @@
                 <li class="slide">
                     <img src="img/img02.jpg" />
                     <p>
-                    <p>Limpeza de <span style="color:rgb(173, 236, 47)">BICO</span> é um procedimento relativamente simples, que consiste na remoção de
+                    <p>Limpeza de <span style="color:rgb(173, 236, 47)">BICO</span> é um procedimento relativamente
+                        simples, que consiste na remoção de
                         obstruções que comprometem o funcionamento da válvula injetora (também chamada de bico injetor)
                     </p>
                     </p>
@@ -54,7 +56,8 @@
                 <li class="slide">
                     <img src="img/img03.jpg" />
                     <p>
-                    <p>O sistema de <span style="color:rgb(173, 236, 47)">FREIO</span> é responsável diretamente pela segurança do veículo, e a Impacto
+                    <p>O sistema de <span style="color:rgb(173, 236, 47)">FREIO</span> é responsável diretamente pela
+                        segurança do veículo, e a Impacto
                         Prime oferece
                         todas as peças e serviços para você rodar numa boa e sem preocupações!</p>
                     </p>
@@ -62,7 +65,8 @@
                 <li class="slide">
                     <img src="img/img04.jpg" />
                     <p>
-                    <p>O motorista consciente entende que a <span style="color:rgb(173, 236, 47)">REVISÃO</span> é tão importante quanto usar o cinto
+                    <p>O motorista consciente entende que a <span style="color:rgb(173, 236, 47)">REVISÃO</span> é tão
+                        importante quanto usar o cinto
                         de segurança no
                         carro. Ela deve ser feita a cada 3 meses ou 10.000km</p>
                     </p>
@@ -70,7 +74,8 @@
                 <li class="slide">
                     <img src="img/img05.jpg" />
                     <p>
-                    <p>Somos especialistas em deixar a <span style="color:rgb(173, 236, 47)">SUSPENSÃO</span> do seu carro com especificações de
+                    <p>Somos especialistas em deixar a <span style="color:rgb(173, 236, 47)">SUSPENSÃO</span> do seu
+                        carro com especificações de
                         fábrica, trabalhamos com
                         todas as peças que compõem a estrutura do seu carro, e o melhor de tudo é que te damos garantia
                         de 1
@@ -80,7 +85,8 @@
                 <li class="slide">
                     <img src="img/img06.jpg" />
                     <p>
-                    <p>Um <span style="color:rgb(173, 236, 47)">BALANCEAMENTO</span> acertivo, evita o desequilíbrio das rodas e pneus que é o principal
+                    <p>Um <span style="color:rgb(173, 236, 47)">BALANCEAMENTO</span> acertivo, evita o desequilíbrio das
+                        rodas e pneus que é o principal
                         causador de vibrações no volante e
                         do veiculo como um
                         todo, dependendo da grandeza do desequilíbrio do conjunto</p>
@@ -88,6 +94,18 @@
                 </li>
             </ul>
         </div>
+    </section>
+
+    <section>
+        <div class="container-servico">
+            <div class="wrapperser-servico">
+                <img src="img/img01.jpg">
+                <img src="img/img02.jpg">
+                <img src="img/img03.jpg">
+                <img src="img/img04.jpg">
+                <img src="img/img05.jpg">
+                <img src="img/img06.jpg">
+            </div>
     </section>
     <!--FIM DO SLIDES CARDS-->
 
