--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <!--TÍTULO E CARDS-->
     <section>
-        <span>
-            <h2>Auto Center Produtos e Promoções </h2>
+        <span class="titulo">
+            Auto Center Produtos e Promoções
         </span>
         <div>
             <div class="card">
