caixa alta voltar

--- a/servico.html
+++ b/servico.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="voltar">
-        <img src="img/logo-site.PNG" alt=""><a href="index.html">Voltar</a>
+        <img src="img/logo-site.PNG" alt=""><a href="index.html">VOLTAR</a>
     </div>
     <!--LOGO DA EMPRESA-->
     <header>
