--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="voltar">
-        <img src="img/logo-site.PNG" alt=""><a href="index.html">Voltar</a>
+        <img src="img/logo-site.PNG" alt=""><a href="index.html">VOLTAR</a>
     </div>
    
     <!--LOGO DA EMPRESA-->
