exclusão itens desnessários

--- a/product.html
+++ b/product.html
@@ -17,10 +17,11 @@
 </head>
 
 <body>
+    <!--BTN VOLTAR MENU INICIAL-->
     <div class="voltar">
         <img src="img/logo-site.PNG" alt=""><a href="index.html">VOLTAR</a>
     </div>
-   
+
     <!--LOGO DA EMPRESA-->
     <header>
         <nav class="navbar">
@@ -29,6 +30,7 @@
             </div>
         </nav>
     </header>
+
     <!--PRODUTOS E CAMPO PESQUISA-->
     <section>
         <h1>Nossos Produtos</h1>
@@ -111,7 +113,7 @@
                 <a href="https://wa.me/5511945093806?" target="_blank"><img class="zap" src="img/whats.png"></a>
             </div>
         </div>
-        
+
     </section>
 
     <!-- javascript -->
