--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--CABEÇALHO, MENU HAMBUGUER, LOGO-->
         <nav class="navbar">
             <ul class="nav-bar">
-                <li class="logo"><a href="#"><img src="img/logo.PNG" alt="logo"></a></li>
+                <li class="logo"><img src="img/logo.PNG" alt="logo"></li>
                 <input type="checkbox" id="check">
                 <span class="menu">
                     <li><a href="servico.html">Serviços</a></li>
